--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,11 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_REDIRECT_URL=
+
+GOOGLE_APP_ID=
+GOOGLE_APP_SECRET=
+GOOGLE_REDIRECT_URL=
