--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,13 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
+#replace [domain] with your domain. ex: http://localhost:8000/auth/facebook/callback
+
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
-FACEBOOK_REDIRECT_URL=
+FACEBOOK_REDIRECT_URL=http://[domain]/auth/facebook/callback
+
 
 GOOGLE_APP_ID=
 GOOGLE_APP_SECRET=
-GOOGLE_REDIRECT_URL=
+GOOGLE_REDIRECT_URL=http://[domain]/auth/google/callback
