--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "anhskohbo/no-captcha": "2.*",
         "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
+        "jrm2k6/cloudder": "0.4.*",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
