--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "anhskohbo/no-captcha": "2.*",
+        "askedio/laravel5-profanity-filter": "^1.0",
         "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
         "jrm2k6/cloudder": "0.4.*",
